unpackaged/main/default/objects/maps__AdvRouteTemplate__c/fields/maps__BaseUrl__c.field-meta.xml
<CustomField>
    <fullName>maps__BaseUrl__c</fullName>
    <description>This will determine the orgs base url to be used in email templates</description>
    <formula>LEFT($Api.Partner_Server_URL_370, FIND(&#39;/services&#39;, $Api.Partner_Server_URL_370))</formula>
    <label>Base Url</label>
    <type>Text</type>
</CustomField>