unpackaged/main/default/objects/maps__AdvRouteTemplate__c/fields/maps__CompletedTabs__c.field-meta.xml
<CustomField>
    <fullName>maps__CompletedTabs__c</fullName>
    <description>This will be an array of numbers.  Each number will correspond to a tab on the template builder.  If a number is missing, it is assumed that that tab has not been completed yet for this template;

Using a text field instead of a multi select picklist, in case we add more tabs later on.  I don&#39;t believe new picklist values will get pushed in a managed package.</description>
    <label>Completed Tabs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>