unpackaged/main/default/objects/maps__AdvRouteTemplate__c/fields/maps__OptimizationSpeedPreference__c.field-meta.xml
<CustomField>
    <fullName>maps__OptimizationSpeedPreference__c</fullName>
    <description>Allows for faster optimization speeds to maintain in-field productivity.</description>
    <label>Optimization Speed Preference</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>15</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>45</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>60</fullName>
                <default>true</default>
                <label>60</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>